--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -1,8 +1,8 @@
 #
 # MIT License
-# Copyright (c) from 2017, Michal Kozakiewicz, github.com/michal037
+# Copyright (c) 2018, Michal Kozakiewicz, github.com/michal037
 #
-# STANDARD C11 - GCC
+# Standard: GCC-C11
 #
 
 cmake_minimum_required(VERSION 3.7)
@@ -11,11 +11,11 @@ project(avr-size2)
 set(CMAKE_C_STANDARD 11)
 
 # Compiler flags
-SET(GCC_COVERAGE_COMPILE_FLAGS "-O2 -Wall") # -O2 -Wall
+SET(GCC_COVERAGE_COMPILE_FLAGS "-O2 -Wall")
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
 
 # Linker flags
-SET(GCC_COVERAGE_LINK_FLAGS "-s") # -s
+SET(GCC_COVERAGE_LINK_FLAGS "-s")
 SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${GCC_COVERAGE_LINK_FLAGS}")
 
 # Sources
@@ -23,7 +23,7 @@ set(SOURCE_FILES
         main.c
         avrNameList.h
 
-        # Windows .exe resource - Optional
+        # Optional resource
         # windows/exe.rc
         )
 add_executable(avr-size2 ${SOURCE_FILES})
